/**
 * ID指定でルールを取得するリクエストDTO
 */
export interface GetByIdRequestDTO {
  id: number;
}
