/**
 * ルールの有効状態を更新するリクエストDTO
 */
export interface UpdateRuleActiveRequestDTO {
  id: number;
  active: boolean;
}
